fixed border overlap

--- a/src/answerscontainer.css
+++ b/src/answerscontainer.css
@@ -81,6 +81,5 @@
   .answercontainer {
     border-bottom: 1px solid rgb(220, 220, 220);
     width: 100%;
-    height: 10vh;
   }
 }
